<resources>
    <string name="app_name">Pkart Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="add_slider">Add slider</string>
    <string name="all_order_details">All order Details</string>
    <string name="category">Category</string>
    <string name="add_products">add Product</string>
    <string name="product_fragment">product fragment</string>
    <string name="slider_fragment">slider fragment</string>
    <string name="upload_slider">upload Slider</string>
    <string name="all_order_activity">All Order Activity</string>
    <string name="loading">Loading..</string>
    <string name="upload_category">Upload Categoty</string>
    <string name="category_name">Category Name</string>
    <string name="i_am_avtar">I am Avtar</string>
    <string name="floating_Button">buttonFloating</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="product_sp">Product SP</string>
    <string name="product_mrp">Product Mrp</string>
    <string name="product_discription">Product Discription</string>
    <string name="product_image">Product Image</string>
    <string name="add_productss">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="todo">TODO</string>
    <string name="shall">Shall</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="dispatched">Dispatched</string>
    <string name="price_1200rs">Price : 1200rs</string>
</resources>